--- a/ARCISETIENNE/templates/blog/accueil.html.twig
+++ b/ARCISETIENNE/templates/blog/accueil.html.twig
@@ -24,7 +24,7 @@
     </figcaption>
     </figure>
     
-    <h1>A Propos de Moi</h1>
+    <h1>A Propos de Moiiii</h1>
     <div class="card text-white bg-primary mb-3" style="max-width: 20rem;" align="left">
     <div class="card-header">Informations personnelles</div>
     <div class="card-body">
